fix horizontal scroll due to skeleton mistake

--- a/sass/custom.css
+++ b/sass/custom.css
@@ -227,7 +227,7 @@ footer {
   padding-bottom: 2rem;
 }
 
-footer > .navigation > a {
+footer .navigation a {
   display: block;
 }
  
